--- a/style.css
+++ b/style.css
@@ -1137,6 +1137,10 @@ html {
         margin-top: 1vw;
         text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
         color: rgb(87, 87, 87);
+    }
+    .introduction
+    {
+        margin-top: 5vh;
     }    
 }
 
