--- a/style.css
+++ b/style.css
@@ -1114,7 +1114,7 @@ html {
         display: none;
     }
 }
-@media screen and (max-width:700px) {
+@media screen and (max-width:700px) and (max-height:1050px) {
     .name
     {display: none;}
     .degree
