--- a/style.css
+++ b/style.css
@@ -1124,7 +1124,7 @@ html {
     .name_height_limit {
         text-align: center;
         margin-right: 0;
-        margin-top: 15vw;
+        /* margin-top: 15vw; */
         text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
         font-size: 2em;
     }
@@ -1140,7 +1140,7 @@ html {
     }
     .introduction
     {
-        margin-top: 10vh;
+        margin-top: 8vh;
     }
     .main_body
     {
