--- a/style.css
+++ b/style.css
@@ -1097,61 +1097,6 @@ html {
     display: none;
 }
 
-/* .name_height_limit {
-    display: none;
-}
-
-.degree_height_limit {
-    display: none;
-} */
-@media screen and (min-width:700px) {
-
-    .name_height_limit {
-        display: none;
-    }
-
-    .degree_height_limit {
-        display: none;
-    }
-}
-@media screen and (max-width:700px) and (max-height:1050px) {
-    .name
-    {display: none;}
-    .degree
-    {
-        display: none;
-    }
-    .name_height_limit {
-        text-align: center;
-        margin-right: 0;
-        /* margin-top: 15vw; */
-        text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
-        font-size: 2em;
-    }
-
-    .degree_height_limit {
-        font-family: Poppins;
-        font-size: 1em;
-        text-align: center;
-        margin-right: 0vw;
-        margin-top: 1vw;
-        text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
-        color: rgb(87, 87, 87);
-    }
-    .introduction
-    {
-        margin-top: 10vh;
-    }
-    .main_body
-    {
-        margin-top: 5vh;
-    }
-    .body 
-    {
-        margin-top: 10vh;
-    }   
-}
-
 @media (max-width:1050px) {
     .sidebar {
         width: 97vw;
@@ -1238,7 +1183,7 @@ html {
 
     .main_body {
         width: 100vw;
-        margin-top: 3em;
+        margin-top: 0em;
         margin-left: 0;
         display: flex;
         flex-direction: column;
@@ -1252,7 +1197,7 @@ html {
         font-size: 2em;
         text-align: center;
         margin-right: 0;
-        margin-top: 20vw;
+        margin-top: 24vw;
     }
 
     .degree {
@@ -1316,10 +1261,18 @@ html {
     body {
         overflow-y: auto;
     }
+    .space_removable
+    {
+        display: none;
+    }
 
 }
 
 @media screen and (max-width:500px) {
+    .space_removable
+    {
+        display: none;
+    }
     .sidebar {
         width: 97vw;
         height: 7vh;
@@ -1474,33 +1427,4 @@ html {
         direction: ltr;
     }
 
-}
-
-@media screen and (max-height: 650px) {
-    .name {
-        display: none;
-    }
-
-    .degree {
-        display: none;
-    }
-
-    .name_height_limit {
-        font-size: 2em;
-        text-align: center;
-        margin-right: 0;
-        margin-top: 10vw;
-        text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
-        font-size: 2.5em;
-    }
-
-    .degree_height_limit {
-        font-family: Poppins;
-        font-size: 1.2em;
-        text-align: center;
-        margin-right: 0vw;
-        margin-top: 1vw;
-        text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
-        color: rgb(87, 87, 87);
-    }
 }
