--- a/style.css
+++ b/style.css
@@ -1097,6 +1097,10 @@ html {
     display: none;
 }
 
+.space_removable2 {
+    display: none;
+}
+
 @media (max-width:1050px) {
     .sidebar {
         width: 97vw;
@@ -1262,18 +1266,22 @@ html {
     body {
         overflow-y: auto;
     }
-    .space_removable
-    {
+
+    .space_removable {
         display: none;
+    }
+
+    .space_removable2 {
+        display:block;
     }
 
 }
 
 @media screen and (max-width:500px) {
-    .space_removable
-    {
+    .space_removable {
         display: none;
     }
+
     .sidebar {
         width: 97vw;
         height: 7vh;
@@ -1341,7 +1349,7 @@ html {
         margin-right: 0;
         margin-top: .5em;
         margin-left: 1vw;
-        
+
     }
 
     .name {
@@ -1428,6 +1436,9 @@ html {
 
     .introduction>* {
         direction: ltr;
+    }
+    .space_removable2 {
+        display:block;
     }
 
 }
