--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+.dark_mode_toggle
+{
+    height: 2.5rem;
+    width: 2.5rem;
+    border: 0px solid grey;
+    border-radius: 50%;
+    /* z-index: 10000; */
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    background-image: url("sun_lightmode.svg");
+    background-size: cover;
+}
 .sidebar {
     display: flex;
     width: 20.16vw;
@@ -210,13 +222,11 @@ body {
     /* ✅ No page scroll */
     font-family: 'Poppins', sans-serif;
     display: flex;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     background-image:
         linear-gradient(to right, #dedede 1px, transparent 1px),
         linear-gradient(to bottom, #dedede 1px, transparent 1px);
     background-size: 40px 40px;
-    /* border: 5px dashed #51D3FF; */
-    border-radius: 25px;
     cursor: url('icons8-mouse-cursor-48.png') 0 0, auto;
 }
 
@@ -240,6 +250,10 @@ body {
     text-align: right;
     margin-right: 8.5vw;
     text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 1vw;
 
 }
 
