--- a/style.css
+++ b/style.css
@@ -1147,7 +1147,7 @@ html {
         border-radius: 25px;
         box-shadow: -5px 5px 1px rgba(0, 0, 0, 0.089);
         z-index: 1000;
-        top: 85vh;
+        top: 77vh;
     }
 
     .sidebar:hover {
@@ -1160,7 +1160,7 @@ html {
         position: fixed;
         transition-duration: .5s;
         transition-timing-function: ease in;
-        top: 85vh;
+        /* top: 85vh; */
     }
 
     .dp {
@@ -1330,7 +1330,7 @@ html {
         border-radius: 25px;
         box-shadow: -5px 5px 1px rgba(0, 0, 0, 0.089);
         z-index: 1000;
-        top: 85vh;
+        top: 77vh;
     }
 
     .sidebar:hover {
