--- a/style.css
+++ b/style.css
@@ -10,6 +10,26 @@
     background-image: url("sun_lightmode.svg");
     background-size: cover;
 }
+.tech-stack-used
+{
+    /* font-family: 'Monospace', monospace; */
+    border: .5px dotted rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    max-width: fit-content;
+    padding: 0em .5em;
+    color: rgb(70, 70, 70);
+    background-color: rgba(239, 239, 239, 0.5);
+}
+.tech-stack-div
+{
+    display: flex;
+    gap: .5em;
+    padding-top: .25em;
+}
 .sidebar {
     display: flex;
     width: 20.16vw;
@@ -708,9 +728,9 @@ h3 {
 }
 
 .python_logo {
-    width: 4.5vw;
+    width: 4.2vw;
     height: 8vh;
-    background-image: url("py_image.jpeg");
+    background-image: url("python\ image.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
