--- a/index.css
+++ b/index.css
@@ -744,8 +744,24 @@ p {
     background-repeat: no-repeat;
     margin-top: 1.5em;
 }
+.ts_logo {
+    width: 4.5vw;
+    height: 8vh;
+    background-image: url("typescript-logo-svgrepo-com.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top: 1.5em;
+}
 
 .js_name {
+    font-size: .9em;
+    color: #333;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 4.5em;
+}
+.ts_name {
     font-size: .9em;
     color: #333;
     font-weight: 600;
@@ -940,6 +956,26 @@ p {
     margin-top: 1.5em;
 }
 .express_name {
+    font-size: 0.85em;
+    font-weight: 600;
+    color: #333;
+    width: 100%;
+    text-align: center;
+    line-height: 1.5em;
+    white-space: normal;
+    word-wrap: break-word;
+    margin-top: 4.75em;
+}
+.next_logo {
+    width: 60px;
+    height: 60px;
+    background-image: url("next-dot-js-svgrepo-com.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top: 1.5em;
+}
+.nextjs_name {
     font-size: 0.85em;
     font-weight: 600;
     color: #333;
